fix: overflow auto

--- a/src/app/blocked/dashboard/lastest-release/lastest-release.component.css
+++ b/src/app/blocked/dashboard/lastest-release/lastest-release.component.css
@@ -22,7 +22,9 @@
 
 @media screen and (min-width: 1200px) {
     .card--height {
-        height: 35vh;
+        max-height: 35vh;
         width: 58vw;
+        overflow: auto;
+        
     }
 }
